# ordering-food

./: .env  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  compose.prod.yml  compose.yml  skills-lock.json
server/: .dockerignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  bacon.toml
server/.cargo/: config.toml
server/.config/: nextest.toml
server/apps/api/: Cargo.toml
server/apps/api/src/: app.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  observability.rs  openapi_export.rs  readiness.rs  runtime.rs  ts_bindings.rs
server/apps/api/tests/: access_boundary_architecture.rs  architecture.rs  catalog_architecture.rs  context_skeleton_architecture.rs  ddd_constitution_architecture.rs  ddd_constitution_phase2_architecture.rs  fulfillment_context_architecture.rs  identity_boundary_architecture.rs  menu_architecture.rs  order_architecture.rs  ordering_context_architecture.rs  ordering_sync_exception_architecture.rs  organization_architecture.rs  platform_architecture.rs
server/apps/bootstrap/: Cargo.toml
server/apps/bootstrap/src/: lib.rs  main.rs
server/apps/bootstrap/tests/: default_data_bootstrap.rs
server/crates/access-application/: Cargo.toml
server/crates/access-application/src/: error.rs  facts.rs  lib.rs  ports.rs  service.rs
server/crates/access-application/tests/: architecture.rs  boundary_architecture.rs  service.rs
server/crates/access-domain/: Cargo.toml
server/crates/access-domain/src/: access_role.rs  access_scope.rs  lib.rs  subject_access_grant.rs
server/crates/access-domain/tests/: architecture.rs  grants.rs
server/crates/access-infrastructure-sqlx/: Cargo.toml
server/crates/access-infrastructure-sqlx/src/: db_roles.rs  lib.rs  repository.rs
server/crates/access-infrastructure-sqlx/tests/: repositories.rs
server/crates/access-integration/: Cargo.toml
server/crates/access-integration/src/: lib.rs
server/crates/access-integration/tests/: boundary_architecture.rs
server/crates/access-published/: Cargo.toml
server/crates/access-published/src/: access_role_ref.rs  lib.rs  order_management_access.rs  store_membership_ref.rs
server/crates/access-published/tests/: contracts.rs
server/crates/app-support/: Cargo.toml
server/crates/app-support/src/: config.rs  runtime.rs
server/crates/authz-application/: Cargo.toml
server/crates/authz-application/src/: error.rs  lib.rs  service.rs
server/crates/authz-domain/: Cargo.toml
server/crates/authz-domain/src/: global_role.rs  lib.rs  store_membership.rs  store_role.rs
server/crates/authz-infrastructure-sqlx/: Cargo.toml
server/crates/authz-infrastructure-sqlx/src/: db_roles.rs  lib.rs  repository.rs
server/crates/authz-infrastructure-sqlx/tests/: repositories.rs
server/crates/bootstrap-core/: Cargo.toml
server/crates/bootstrap-core/src/: descriptor.rs  error.rs  lib.rs  planner.rs  registration.rs  registry.rs
server/crates/catalog-application/: Cargo.toml
server/crates/catalog-application/src/: dto.rs  error.rs  lib.rs  module.rs  organization_scope.rs  ports.rs
server/crates/catalog-application/tests/: architecture.rs  organization_scope_boundary.rs
server/crates/catalog-domain/: Cargo.toml
server/crates/catalog-domain/src/: brand_catalog.rs  brand_catalog_id.rs  category.rs  display_rule.rs  error.rs  item.rs  lib.rs  price.rs  sellable_status.rs  store_catalog.rs  store_catalog_id.rs  store_item_listing.rs
server/crates/catalog-domain/tests/: architecture.rs
server/crates/catalog-infrastructure-sqlx/: Cargo.toml
server/crates/catalog-infrastructure-sqlx/src/: brand_catalog_read_repository.rs  brand_catalog_repository.rs  category_read_repository.rs  category_repository.rs  item_read_repository.rs  item_repository.rs  lib.rs  module.rs  store_catalog_read_repository.rs  store_catalog_repository.rs  store_item_listing_repository.rs  transaction.rs
server/crates/catalog-infrastructure-sqlx/tests/: architecture.rs  repositories.rs
server/crates/catalog-integration/: Cargo.toml
server/crates/catalog-integration/src/: lib.rs  organization_scope_acl.rs
server/crates/catalog-published/: Cargo.toml
server/crates/catalog-published/src/: lib.rs
server/crates/database-infrastructure-sqlx/: Cargo.toml  build.rs
server/crates/database-infrastructure-sqlx/migrations/: 202603140001_baseline.down.sql  (+24 more)
server/crates/fulfillment-application/: Cargo.toml
server/crates/fulfillment-domain/: Cargo.toml
server/crates/fulfillment-infrastructure-sqlx/: Cargo.toml
server/crates/fulfillment-integration/: Cargo.toml
server/crates/fulfillment-published/: Cargo.toml
server/crates/identity-application/: Cargo.toml
server/crates/identity-domain/: Cargo.toml
server/crates/identity-infrastructure-auth/: Cargo.toml
server/crates/identity-infrastructure-sqlx/: Cargo.toml
server/crates/identity-integration/: Cargo.toml
server/crates/identity-published/: Cargo.toml
server/crates/menu-application/: Cargo.toml
server/crates/menu-domain/: Cargo.toml
server/crates/menu-infrastructure-sqlx/: Cargo.toml
server/crates/order-application/: Cargo.toml
server/crates/order-domain/: Cargo.toml
server/crates/order-infrastructure-sqlx/: Cargo.toml
server/crates/ordering-application/: Cargo.toml
server/crates/ordering-domain/: Cargo.toml
server/crates/ordering-infrastructure-sqlx/: Cargo.toml
server/crates/ordering-integration/: Cargo.toml
server/crates/ordering-published/: Cargo.toml
server/crates/organization-application/: Cargo.toml
server/crates/organization-domain/: Cargo.toml
server/crates/organization-infrastructure-sqlx/: Cargo.toml
server/crates/organization-integration/: Cargo.toml
server/crates/organization-published/: Cargo.toml
server/crates/platform-kernel/: Cargo.toml
server/crates/shared/: Cargo.toml
server/crates/shared-kernel/: Cargo.toml
server/crates/user/: Cargo.toml
server/migrations/: 202603090001_bootstrap.sql  202603090002_create_users.up.sql
server/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  observability.rs  readiness.rs
server/src/routes/: api.rs  health.rs  mod.rs
(+436 files in other folders)
