[workspace]
resolver = "3"
members = [
    "crates/shared",
    "crates/user",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
ordering-food-shared = { path = "crates/shared" }
ordering-food-user = { path = "crates/user" }

# Web framework
axum = { version = "0.8", features = ["json", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "request-id", "trace", "util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_urlencoded = "0.7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Cache
redis = { version = "1", features = ["aio", "tokio-comp"] }

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# API documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[package]
name = "ordering-food-server"
version.workspace = true
edition.workspace = true

[dependencies]
ordering-food-shared = { workspace = true }
ordering-food-user = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
