[package]
name = "ordering-food-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "ordering-food-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
config.workspace = true
dotenvy.workspace = true
ordering-food-database-infrastructure-sqlx = { path = "../../crates/database-infrastructure-sqlx" }
ordering-food-identity-application = { path = "../../crates/identity-application" }
ordering-food-identity-domain = { path = "../../crates/identity-domain" }
ordering-food-identity-infrastructure-auth = { path = "../../crates/identity-infrastructure-auth" }
ordering-food-identity-infrastructure-sqlx = { path = "../../crates/identity-infrastructure-sqlx" }
ordering-food-menu-application = { path = "../../crates/menu-application" }
ordering-food-menu-domain = { path = "../../crates/menu-domain" }
ordering-food-menu-infrastructure-sqlx = { path = "../../crates/menu-infrastructure-sqlx" }
ordering-food-order-application = { path = "../../crates/order-application" }
ordering-food-order-domain = { path = "../../crates/order-domain" }
ordering-food-order-infrastructure-sqlx = { path = "../../crates/order-infrastructure-sqlx" }
ordering-food-bootstrap-core = { path = "../../crates/bootstrap-core" }
ordering-food-shared-kernel = { path = "../../crates/shared-kernel" }
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde_urlencoded.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
ts-rs.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
