[package]
name = "ordering-food-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "ordering-food-server"
path = "src/main.rs"

[[bin]]
name = "export-openapi"
path = "src/bin/export-openapi.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
config.workspace = true
dotenvy.workspace = true
ordering-food-access-application = { path = "../../crates/access-application" }
ordering-food-access-integration = { path = "../../crates/access-integration" }
ordering-food-access-published = { path = "../../crates/access-published" }
ordering-food-database-infrastructure-sqlx = { path = "../../crates/database-infrastructure-sqlx" }
ordering-food-identity-integration = { path = "../../crates/identity-integration" }
ordering-food-identity-application = { path = "../../crates/identity-application" }
ordering-food-identity-published = { path = "../../crates/identity-published" }
ordering-food-catalog-application = { path = "../../crates/catalog-application" }
ordering-food-catalog-integration = { path = "../../crates/catalog-integration" }
ordering-food-fulfillment-application = { path = "../../crates/fulfillment-application" }
ordering-food-fulfillment-integration = { path = "../../crates/fulfillment-integration" }
ordering-food-ordering-application = { path = "../../crates/ordering-application" }
ordering-food-ordering-integration = { path = "../../crates/ordering-integration" }
ordering-food-organization-integration = { path = "../../crates/organization-integration" }
ordering-food-organization-application = { path = "../../crates/organization-application" }
ordering-food-organization-published = { path = "../../crates/organization-published" }
ordering-food-bootstrap-core = { path = "../../crates/bootstrap-core" }
ordering-food-platform-kernel = { path = "../../crates/platform-kernel" }
ordering-food-shared-kernel = { path = "../../crates/shared-kernel" }
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde_urlencoded.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
ts-rs.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
ordering-food-access-domain = { path = "../../crates/access-domain" }
ordering-food-fulfillment-domain = { path = "../../crates/fulfillment-domain" }
ordering-food-identity-domain = { path = "../../crates/identity-domain" }
ordering-food-ordering-domain = { path = "../../crates/ordering-domain" }
ordering-food-organization-published = { path = "../../crates/organization-published" }
time.workspace = true
