[package]
name = "ordering-food-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
ordering-food-app-support = { path = "../../crates/app-support" }
ordering-food-catalog-integration = { path = "../../crates/catalog-integration" }
ordering-food-organization-integration = { path = "../../crates/organization-integration" }
ordering-food-platform-kernel = { path = "../../crates/platform-kernel" }

[dev-dependencies]
ordering-food-database-infrastructure-sqlx = { path = "../../crates/database-infrastructure-sqlx" }
time.workspace = true
uuid.workspace = true
