[package]
name = "ordering-food-access-application"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-access-domain = { path = "../access-domain" }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
