[package]
name = "ordering-food-access-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-access-application = { path = "../access-application" }
ordering-food-access-infrastructure-sqlx = { path = "../access-infrastructure-sqlx" }
ordering-food-access-published = { path = "../access-published" }
ordering-food-identity-published = { path = "../identity-published" }
ordering-food-organization-published = { path = "../organization-published" }
sqlx.workspace = true
