[package]
name = "ordering-food-app-support"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
ordering-food-platform-kernel = { path = "../platform-kernel" }
ordering-food-shared-kernel = { path = "../shared-kernel" }
