[package]
name = "ordering-food-authz-application"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-authz-domain = { path = "../authz-domain" }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
