[package]
name = "ordering-food-authz-infrastructure-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-authz-application = { path = "../authz-application" }
ordering-food-authz-domain = { path = "../authz-domain" }
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
ordering-food-database-infrastructure-sqlx = { path = "../database-infrastructure-sqlx" }
time.workspace = true
