[package]
name = "ordering-food-catalog-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-catalog-application = { path = "../catalog-application" }
ordering-food-catalog-domain = { path = "../catalog-domain" }
ordering-food-catalog-infrastructure-sqlx = { path = "../catalog-infrastructure-sqlx" }
ordering-food-catalog-published = { path = "../catalog-published" }
ordering-food-organization-published = { path = "../organization-published" }
sqlx.workspace = true
uuid.workspace = true
