[package]
name = "ordering-food-fulfillment-infrastructure-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-fulfillment-application = { path = "../fulfillment-application" }
ordering-food-fulfillment-domain = { path = "../fulfillment-domain" }
ordering-food-shared-kernel = { path = "../shared-kernel" }
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
ordering-food-database-infrastructure-sqlx = { path = "../database-infrastructure-sqlx" }
time.workspace = true
