[package]
name = "ordering-food-identity-application"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-identity-domain = { path = "../identity-domain" }
ordering-food-shared-kernel = { path = "../shared-kernel" }
thiserror.workspace = true

[dev-dependencies]
time.workspace = true
tokio.workspace = true
