[package]
name = "ordering-food-identity-infrastructure-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-identity-application = { path = "../identity-application" }
ordering-food-identity-domain = { path = "../identity-domain" }
ordering-food-shared-kernel = { path = "../shared-kernel" }
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
ordering-food-database-infrastructure-sqlx = { path = "../database-infrastructure-sqlx" }
tokio.workspace = true
