[package]
name = "ordering-food-identity-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-identity-application = { path = "../identity-application" }
ordering-food-identity-domain = { path = "../identity-domain" }
ordering-food-identity-infrastructure-auth = { path = "../identity-infrastructure-auth" }
ordering-food-identity-infrastructure-sqlx = { path = "../identity-infrastructure-sqlx" }
ordering-food-identity-published = { path = "../identity-published" }
ordering-food-platform-kernel = { path = "../platform-kernel" }
redis.workspace = true
sqlx.workspace = true
uuid.workspace = true
