[package]
name = "ordering-food-menu-infrastructure-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-menu-application = { path = "../menu-application" }
ordering-food-menu-domain = { path = "../menu-domain" }
ordering-food-shared-kernel = { path = "../shared-kernel" }
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
