[package]
name = "ordering-food-order-application"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-order-domain = { path = "../order-domain" }
ordering-food-shared-kernel = { path = "../shared-kernel" }
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
time.workspace = true
tokio.workspace = true

