[package]
name = "ordering-food-ordering-published"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ordering-food-shared-kernel = { path = "../shared-kernel" }
serde.workspace = true
time.workspace = true

[dev-dependencies]
serde_json.workspace = true
time.workspace = true
