[package]
name = "ordering-food-organization-application"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-organization-domain = { path = "../organization-domain" }
ordering-food-organization-published = { path = "../organization-published" }
ordering-food-platform-kernel = { path = "../platform-kernel" }
ordering-food-shared-kernel = { path = "../shared-kernel" }
thiserror.workspace = true

[dev-dependencies]
time.workspace = true
tokio.workspace = true
