[package]
name = "ordering-food-organization-infrastructure-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
ordering-food-organization-application = { path = "../organization-application" }
ordering-food-organization-domain = { path = "../organization-domain" }
ordering-food-shared-kernel = { path = "../shared-kernel" }
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
ordering-food-database-infrastructure-sqlx = { path = "../database-infrastructure-sqlx" }
time.workspace = true
